--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,10 +40,18 @@ jobs:
         node | "$(Agent.OS)"
     displayName: 'Cache node_modules'
 
-  - script: |
-      npx checkly test -e ENVIRONMENT_URL=$(ENVIRONMENT_URL) --reporter=github --record
-    displayName: 'Run checks'
 
+- script: |
+    echo Add other commands here
+    echo $(Build.SourceBranch)
+  displayName: 'Run a multi-line script'
+
+- script: |
+    npx checkly test --url $(Build.Repository.Uri) --reporter=github --record
+  env:
+    ENVIRONMENT_URL: $(Build.Repository.Uri)
+  displayName: 'Run Checkly tests'
+  
   - script: |
       cat checkly-github-report.md
     displayName: 'Create summary'
