--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,8 @@ jobs:
 
     - task: NodeTool@0
       inputs:
-        versionSpec: $(cat .nvmrc)
+        versionSource: 'spec'
+        versionSpec: '6.10.0'
 
     - task: Cache@2
       inputs:
