updated azure yml

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,7 @@ jobs:
 
     - script: |
         if [ ! -d "node_modules" ]; then
-          npm ci
+          npm i
         fi
       displayName: 'Install dependencies'
 
